--- a/css/pilgrimage.css
+++ b/css/pilgrimage.css
@@ -11,7 +11,7 @@
     font-family: 'FutureZ';
     color: var(--color-one);
 }
-bod
+
 :root{
 
     --color-one:#CCAC00;
@@ -35,19 +35,17 @@ body, html {
     justify-content: center;
     align-items: center;
     text-align: center;
-    background-image: url('../img/PuertaFondo1.png'); /* Establece la imagen de fondo */
-    background-size: cover; /* Asegura que la imagen cubra toda la página */
-    background-position: center; /* Centra la imagen de fondo */
     color: #ecf0f1;
 }
 
 
 .container {
-    max-width: 600px;
+    
     padding: 20px;
-    background-color: var(--color-twoTrans) ; /* Color de fondo semitransparente */
-    border-radius: 15px; /* Bordes redondeados para el cuadro */
-    color: var(--color-five);
+    background-image: url('../resources/dialogBox/CardX5.png'); 
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 p {
@@ -56,7 +54,10 @@ p {
 }
 
 button {
-    background-color: var(--color-one); /* Cambia a un color más vibrante */
+    background-image: url('../resources/Button/ButtonNormal.png'); 
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
     color: #ffffff;
     border: 0;
     padding: 15px 30px; /* Aumenta el relleno para un botón más grande */
@@ -70,7 +71,7 @@ button {
 }
 
 button:hover, button:focus {
-    background-color: #e1c700; /* Color más oscuro al pasar el ratón o enfocar */
+    background-image: url('../resources/Button/ButtonHover.png'); 
     transform: scale(1.05); /* Ligeramente más grande al pasar el ratón o enfocar */
     outline: none; /* Elimina el contorno al enfocar */
 }
@@ -132,4 +133,10 @@ button:hover, button:focus {
     right: 20px;
     bottom: 20px;
     cursor: pointer;
+}
+
+.hub-background {
+    background-image: url('../img/PuertaFondo1.png');
+    background-size: cover;
+    background-position: center;
 }
