--- a/css/pilgrimage.css
+++ b/css/pilgrimage.css
@@ -43,7 +43,7 @@ body, html {
     
     padding: 20px;
     background-image: url('../resources/dialogBox/CardX5.png'); 
-    background-size: cover;
+    background-size: contain; 
     background-repeat: no-repeat;
     background-position: center;
 }
