--- a/css/estiloDani.css
+++ b/css/estiloDani.css
@@ -1,50 +1,37 @@
-body, html {
-    margin: 0;
-    padding: 0;
-    height: 100%;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+  cursor: none;
+  background-image: url(../resources/img/intro3.webp);
+}
+p {
+  font-size: 1em;
+  text-align: justify;
+  line-height: 1.8em;
+  padding: 0.2em;
+  color: white;
+}
+#flashlight {
+  --Xpos: 50vw;
+  --Ypos: 50vh;
+}
+#flashlight:before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  pointer-events: none;
+  background: radial-gradient(
+    circle 6em at var(--Xpos) var(--Ypos),
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 1)
+  );
+}
+@media screen and (max-width: 500px) {
+  body {
+    font-size: 14px;
   }
-  
-  #container {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    background-color: black;
-  }
-  
-  #flashlight {
-    position: absolute;
-    width: 100px; /* Cambiar el tamaño de la linterna */
-    height: 100px; /* Cambiar el tamaño de la linterna */
-    border-radius: 50%;
-    background-color: rgba(255, 255, 255, 0.5);
-    pointer-events: none;
-    transform: translate(-50%, -50%);
-    overflow: hidden;
-  }
-  
-  #text-display {
-    position: absolute;
-    color: white;
-    font-size: 18px;
-    text-align: center; /* Centra el texto horizontalmente */
-    line-height: 1.5; /* Espaciado de línea para el texto */
-  }
-  
-  #text1, #text2, #text3 {
-    width: 200px; /* Ancho del texto */
-    left: 50%; /* Centra el texto horizontalmente */
-    top: 50%; /* Centra el texto verticalmente */
-    transform: translate(-50%, -50%); /* Centra el texto completamente */
-  }
-  
-  #checkmark {
-    width: 100px;
-    height: 100px;
-    background-image: url('checkmark.png'); /* Ajusta la URL a la imagen de tu check verde */
-    background-size: cover;
-  }
-  
-  .hidden {
-    display: none;
-  }
-  
+}
