--- a/css/pilgrimage.css
+++ b/css/pilgrimage.css
@@ -31,7 +31,7 @@ body, html {
     padding: 0;
     width: 100%;
     height: 100%;
-    font-family: 'Arial', sans-serif;
+    font-family: 'Roboto', sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -72,6 +72,10 @@ p {
     line-height: 1.5; /* Mejora la legibilidad del texto */
     justify-content: center;
     align-items: center;
+    text-align: justify;
+    text-justify: inter-word;
+    line-height: 2.5;
+    font-size: 20px;
 }
 
 button {
