--- a/css/estiloDani.css
+++ b/css/estiloDani.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
   cursor: none;
-  background-image: url(../resources/img/intro3.webp);
+  background-image: url(../resources/img/intro3.webp); /*Insertar aqui la imagen con los simbolos a buscar*/
 }
 p {
   font-size: 1em;
