--- a/css/pilgrimage.css
+++ b/css/pilgrimage.css
@@ -79,6 +79,7 @@ p {
 .introParagraph {
     line-height: 2.5;
     font-size: 20px;
+    
 }
 button {
     background-image: url('../resources/Button/ButtonNormal.png'); 
@@ -190,4 +191,12 @@ button:hover, button:focus {
     background-image: url('../img/PuertaFondo1.png');
     background-size: cover;
     background-position: center;
+}
+.room1-background {
+    background-image: url('../img/Room1.webp');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100vh;
 }
