--- a/css/pilgrimage.css
+++ b/css/pilgrimage.css
@@ -200,3 +200,23 @@ button:hover, button:focus {
     width: 100%;
     height: 100vh;
 }
+
+/*Item Glows Section*/
+
+#door-glow{
+    position: fixed;
+    top: 120px;
+    left: 657px;
+    height: 350px;
+    width: 220px;
+    background-image: url('../resources/glows/door-glow.png');
+    background-size: cover; /* La imagen cubrirá todo el div */
+    background-repeat: no-repeat; /* Evita la repetición de la imagen */
+    background-position: center; /* Centra la imagen */
+    opacity: 0; /* Inicialmente oculta la imagen */
+    transition: opacity 0.5s ease; /* Transición suave para la opacidad */
+}
+
+#door-glow:hover{
+    opacity: 1;
+}
