--- a/css/pilgrimage.css
+++ b/css/pilgrimage.css
@@ -6,7 +6,6 @@
     font-style: normal;
 }
 
-
 .titulo {
     font-family: 'FutureZ';
     color: var(--color-one);
@@ -108,6 +107,7 @@ button:hover, button:focus {
     transform: scale(1.05); /* Ligeramente más grande al pasar el ratón o enfocar */
     outline: none; /* Elimina el contorno al enfocar */
 }
+/*POR QUE COJONES HAY UN MODAL AQUI NO SE USA COJONES POR QUE POR QUE*/
 .modal {
     display: none; /* Ocultar por defecto */
     position: fixed;
@@ -226,7 +226,61 @@ button:hover, button:focus {
 #door-glow:hover{
     opacity: 1;
 }
-/*Final Glows Section*/
+
+#small-box-glow{
+    position: fixed;
+    top: 74vh;
+    left: 15.5vw;
+    height: 18.5vh;
+    width: 10vw;
+    background-image: url('../resources/glows/small-box-glow.png');
+    background-size: cover; /* La imagen cubrirá todo el div */
+    background-repeat: no-repeat; /* Evita la repetición de la imagen */
+    background-position: center; /* Centra la imagen */
+    opacity: 0; /* Inicialmente oculta la imagen */
+    transition: opacity 0.5s ease; /* Transición suave para la opacidad */
+    cursor: pointer;
+}
+
+#small-box-glow:hover{
+    opacity: 1;
+}
+
+/*Final Items Glows Section*/
+
+/*Ventanas modales config*/
+
+#background-overlay {
+    position: fixed;
+    opacity: 0;
+    transition: 200ms ease-in-out;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, .5);
+    pointer-events: none;
+  }
+  
+  #background-overlay.active {
+    opacity: 1;
+    pointer-events: all;
+  }
+
+  .modal-puzzle {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    transition: 500ms ease-in-out;
+    z-index: 10;
+  }
+  
+  .modal-puzzle.active {
+    transform: translate(-50%, -50%) scale(1);
+  }
+
+/*Ventanas modales config end*/
 
 #hud {
     position: fixed;
