--- a/css/cinematic.css
+++ b/css/cinematic.css
@@ -6,13 +6,14 @@
     bottom: 0;
     background-size: cover;
     background-position: center center;
-    transition: opacity 0.3s ease-in-out;
+    transition: background-image 0.5s ease; /* Transición suave de la opacidad */
 }
 
 #blurryBackground {
     filter: blur(8px);
     z-index: 1;
     opacity: 1;
+    
 }
 
 #centerImageContainer {
@@ -35,7 +36,7 @@
     max-height: 100%;
     width: auto; /* Esto mantendrá la imagen en su tamaño original hasta el máximo permitido */
     height: auto;
-    opacity: 1;
+    
 }
 
 
@@ -50,8 +51,7 @@
     max-height: 9.375rem; /* 150px / 16px */
     background: url('../resources/dialogBox/CardX5.png') no-repeat center center;
     background-size: 100% 100%;
-    opacity: 1; /* Establecer la opacidad inicial completa */
-    transition: opacity 0.5s ease-in-out; /* Transición suave de la opacidad */
+
 }
 #cinematicdialogText{
     font-size: 1em;  /* Establece el tamaño de la fuente a 20px */
@@ -62,8 +62,8 @@
 }
 #cinematicNextArrow {
     position: absolute;
-    bottom: 10%;
-    right: 10%;
+    bottom: 3%;
+    right: 27%;
     z-index: 4;
     cursor: pointer;
    
