--- a/css/crystalariumPuzzle.css
+++ b/css/crystalariumPuzzle.css
@@ -31,3 +31,20 @@ button {
 button:hover {
     background-color: #eee; /* Cambio de color de fondo al pasar el mouse para mejorar la interactividad */
 }
+
+/* Estilos para centrar el grid de la fase 3 en la pantalla */
+#botones {
+    display: flex;
+    justify-content: center; /* Centra horizontalmente */
+    align-items: center; /* Centra verticalmente */
+    margin-top: 20px; /* Espacio superior */
+}
+
+/* Estilos adicionales para el grid de la fase 3 */
+#botones {
+    margin-top: 20px; /* Espacio superior */
+}
+
+.color-cuadro {
+    /* Estilos de los cuadros de color */
+}
