--- a/css/fullscreenWarning.css
+++ b/css/fullscreenWarning.css
@@ -5,13 +5,11 @@
   }
   
   .fullscreen-window-warning {
-    position: fixed;
+    position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%) scale(0);
-    transition: 500ms ease-in-out;
+    transform: translate(-50%, -50%);
     border-radius: 10px;
-    z-index: 10;
     background-image: url('../resources/dialogBox/CardX5.png');
     background-size: 100% 100%; 
     background-repeat: no-repeat;
@@ -19,10 +17,6 @@
     padding: 40px;
     width: 800px;
     max-width: 80%;
-  }
-  
-  .fullscreen-window-warning.active {
-    transform: translate(-50%, -50%) scale(1);
   }
   
   .fullscreen-window-warning-header {
@@ -47,18 +41,13 @@
   }
   
   #fullscreen-window-warning-overlay {
+    display: none;
     position: fixed;
-    opacity: 0;
-    transition: 500ms ease-in-out;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0, 0, 0, .5);
+    background-color: rgba(0, 0, 0, .7);
     pointer-events: none;
-    z-index: 9;
-  }
-  
-  #fullscreen-window-warning-overlay.active {
-    opacity: 1;
+    z-index: 1000;
   }
