--- a/css/hub.css
+++ b/css/hub.css
@@ -157,11 +157,17 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 }
+
 
 #hub-icon-selector img{
     width: 80%;
     height: 80%;
+}
+
+#hub-icon-selector img:hover{
+    border: solid 2px var(--color-four);
 }
 
 #hub-blank-space{
