--- a/css/jeepPuzzle.css
+++ b/css/jeepPuzzle.css
@@ -5,6 +5,25 @@
   font-weight: normal;
   font-style: normal;
 }
+/*Ventana modal*/
+
+#modal-puzzle-jeep{
+  background-image: url('../resources/dialogBox/CardX5.png');
+  background-size: 100% 100%; 
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-top: 40px;
+  padding: 50px;
+  padding-top: 70px;
+  width: 75vw;
+  height: 92vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+/*Seccion del jeep*/
 
 #simon-container {
   justify-self: center;
@@ -27,19 +46,20 @@
   font-family: "FutureZ";
   color: var(--color-one);
   font-size: 3rem;
-  margin-bottom: 1rem;
 }
 
 .simon-first-row {
   display: flex;
   flex-direction: row;
-  gap: 1rem;
+  gap: 0.85rem;
+  margin-bottom: 0.35rem;
 }
 
 .simon-first-row > .simon-tile {
   border-radius: 1rem;
   height: 18.3vh;
-  width: 11vw;
+  width: 11.3vw;
+  border: solid 3.5px var(--color-four);
 }
 
 .simon-second-row {
