Juego Funcional, sin CSS

--- a/css/styleCorridor.css
+++ b/css/styleCorridor.css
@@ -63,14 +63,14 @@ h1 {
     background-color: black;
 }
 
-.rat {
+.pj {
     position: absolute;
     top: 0px;
     left: 0px;
     z-index: 1;
 }
 
-.food {
+.door {
     position: absolute;
     bottom: 0px;
     right: 0px;
