--- a/css/computer.css
+++ b/css/computer.css
@@ -37,3 +37,20 @@ user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge,
     text-shadow: 1px 1px 2px rgb(150, 167, 124), 0 0 1em rgb(150, 167, 124), 0 0 0.2em rgb(150, 167, 124);
 
 }
+#word-container-computer p {
+    text-align: justify;
+}
+
+#word-container-computer p span {
+    display: inline-block;
+    
+    padding: 2px 5px;
+    margin-right: 5px;
+    margin-bottom: 5px;
+    cursor: pointer;
+}
+
+#word-container-computer p span:hover {
+    background-color: rgb(177, 253, 0);
+    color: green;
+}
